--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GitHUB Project</h1>
+    <h1>GitHUB Project with help of vscode</h1>
 </body>
 </html>
